# Qunomon_tutorial_mnist

./: README.md
best_practice_2/: README.md  pyproject.toml
best_practice_2/notebooks/: sandbox.ipynb  sandbox2.ipynb
best_practice_2/resources/: README.md
best_practice_2/resources/MNIST/: aug_test.h5
best_practice_2/resources/models/: adversarial_training_model.pth  best_model.pth
