[tool.poetry]
name = "mnist-tutorial"
version = "0.1.0"
description = ""
authors = ["koki-ito <ko-ito@hs21.co.jp>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
torchvision = "^0.20.1"
h5py = "^3.12.1"
scikit-learn = "^1.3.2"
numpy="^2.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
